Fix blog on small screens

--- a/frontend/landing/static/global.css
+++ b/frontend/landing/static/global.css
@@ -268,6 +268,8 @@ figcaption {
   color: var(--grey-1);
   font-size: 0.85em;
   font-style: italic;
+  padding-left: 2em;
+  padding-right: 2em;
 }
 
 /* unvisited link */
